[Cocoa] Right Command key should have location DOM_KEY_LOCATION_RIGHT instead of DOM_KEY_LOCATION_STANDARD https://bugs.webkit.org/show_bug.cgi?id=202601 <rdar://problem/55992775>

Reviewed by Wenson Hsieh.

Source/WebCore:

On Cocoa platforms the right Command key is mapped to VK_APPS. Report VK_APPS as being on the
right side of the keyboard on these platforms.

* dom/KeyboardEvent.cpp:
(WebCore::keyLocationCode):

LayoutTests:

Update test to emit the location property of the DOM key event to ensure that we do not
regress the value of this property.

* fast/events/ios/keydown-keyup-special-keys-in-non-editable-element-expected.txt:
* fast/events/ios/keydown-keyup-special-keys-in-non-editable-element.html:

Canonical link: https://commits.webkit.org/217220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252066 268f45cc-cd09-0410-ab3c-d52691b4dbfc